@@ -1,5 +1,5 @@
 Application.id = FRD
-Application.version =0.8
+Application.version =0.81
 Application.title = FreeRapid Downloader ${Application.version} - Vity (c) 2008 
 Application.vendor = Vity
 Application.vendorId = VitySoft
@@ -255,7 +255,7 @@ message.areyousuredelete=Opravdu si přejete smazat následující soubory?%s
 downloadInProgress=Stahování souborů stále probíhá.\nPřenos bude přerušen.\nOpravdu si přejete ukončit aplikaci?
 
 statusBarInfo=Dokončená stahování: %d z %d - Aktuální rychlost: %s/s
-tooltipTrayInfo=FreeRapid Downloader\n\nDokončená stahování: %d z %d\nAktuální rychlost: %s/s\n
+tooltipTrayInfo=FreeRapid Downloader%n%nDokončená stahování: %d z %d%nAktuální rychlost: %s/s%n
 frameTitleInfo=%d/%d - %9s/s - ${Application.title}
 frameTitleInfo0Speed=%d/%d - %s/s - ${Application.title}
 frameTitleInfoNoDownloads=%d/%d - ${Application.title}
