@@ -3,7 +3,7 @@
 #
 
 Application.id = FRD
-Application.version = 0.8
+Application.version = 0.81
 Application.title = FreeRapid Downloader ${Application.version} by Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
