@@ -1,7 +1,7 @@
 # wersja pl 14.12.2008 - Soft4U Admin
 
 Application.id = FRD
-Application.version = 0.8
+Application.version = 0.81
 Application.title = FreeRapid Downloader ${Application.version} - Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
