@@ -1,5 +1,5 @@
 Application.id = FRD
-Application.version = 0.8a
+Application.version = 0.81
 Application.title = FreeRapid Downloader ${Application.version} by Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
